fix a bug in clear-spacing

--- a/template-fis3/source/static/style/utils/_mixins.scss
+++ b/template-fis3/source/static/style/utils/_mixins.scss
@@ -89,6 +89,7 @@
 
 // http://www.zhangxinxu.com/wordpress/2012/04/inline-block-space-remove-%e5%8e%bb%e9%99%a4%e9%97%b4%e8%b7%9d/
 @mixin clear-spacing($child-selector: "> *") {
+  width: 100%;
   display: table;
   word-spacing: -.43em;
 
